--- a/ltmain.in
+++ b/ltmain.in
@@ -65,6 +65,74 @@ mkdir="mkdir"
 mv="mv -f"
 rm="rm -f"
 
+# Ensure that we are using m4 macros, and libtool script from the same
+# release of libtool.
+package_revision=`( set $TIMESTAMP; echo $1; )`
+if test "$package_revision" != "$macro_revision"; then
+  if test "$VERSION" != "$macro_version"; then
+    if test -z "$macro_version"; then
+      cat >&2 <<_LT_EOF
+$progname: Version mismatch error.  This is $PACKAGE $VERSION, but the
+$progname: definition of this AC_PROG_LIBTOOL comes from an older release.
+$progname: You should recreate aclocal.m4 with macro's from $PACKAGE $VERSION
+$progname: and run autoconf again.
+_LT_EOF
+    else
+      cat >&2 <<_LT_EOF
+$progname: Version mismatch error.  This is $PACKAGE $VERSION, but the
+$progname: definition of this AC_PROG_LIBTOOL comes from $PACKAGE $macro_version.
+$progname: You should recreate aclocal.m4 with macro's from $PACKAGE $VERSION
+$progname: and run autoconf again.
+_LT_EOF
+    fi
+  else
+    cat >&2 <<_LT_EOF
+$progname: Version mismatch error.  This is $PACKAGE $VERSION, revision $package_revision,
+$progname: but the definition used by this AC_PROG_LIBTOOL comes from revision
+$progname: $macro_revision.
+$progname: You should recreate aclocal.m4 with macro's from revision $package_revision
+$progname: of $PACKAGE $VERSION and run autoconf again.
+_LT_EOF
+  fi
+
+  # $? = 63 is used to indicate version mismatch to missing.
+  exit 63
+fi
+
+# Ensure that we are using m4 macros, and libtool script from the same
+# release of libtool.
+package_revision=`( set $TIMESTAMP; echo $1; )`
+if test "$package_revision" != "$macro_revision"; then
+  if test "$VERSION" != "$macro_version"; then
+    if test -z "$macro_version"; then
+      cat >&2 <<_LT_EOF
+$progname: Version mismatch error.  This is $PACKAGE $VERSION, but the
+$progname: definition of this AC_PROG_LIBTOOL comes from an older release.
+$progname: You should recreate aclocal.m4 with macro's from $PACKAGE $VERSION
+$progname: and run autoconf again.
+_LT_EOF
+    else
+      cat >&2 <<_LT_EOF
+$progname: Version mismatch error.  This is $PACKAGE $VERSION, but the
+$progname: definition of this AC_PROG_LIBTOOL comes from $PACKAGE $macro_version.
+$progname: You should recreate aclocal.m4 with macro's from $PACKAGE $VERSION
+$progname: and run autoconf again.
+_LT_EOF
+    fi
+  else
+    cat >&2 <<_LT_EOF
+$progname: Version mismatch error.  This is $PACKAGE $VERSION, revision $package_revision,
+$progname: but the definition used by this AC_PROG_LIBTOOL comes from revision
+$progname: $macro_revision.
+$progname: You should recreate aclocal.m4 with macro's from revision $package_revision
+$progname: of $PACKAGE $VERSION and run autoconf again.
+_LT_EOF
+  fi
+
+  # $? = 63 is used to indicate version mismatch to missing.
+  exit 63
+fi
+
 # Sed substitution that helps us do robust quoting.  It backslashifies
 # metacharacters that are still active within double-quoted strings.
 Xsed="${SED}"' -e 1s/^X//'
@@ -571,7 +639,7 @@ exec_cmd=
       exit 1
       ;;
     esac
-    
+
     func_infer_tag $base_compile
 
     for arg in $later; do
