* config/mailnotify: New file for mailing commit notifications, imported from cvs-utils. * commit: Updated from cvs-utils and tweaked for libtool. * Makefile.am (EXTRA_DIST): Add config/mailnotify.

--- a/tests/cdemo/configure.ac
+++ b/tests/cdemo/configure.ac
@@ -16,7 +16,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
 # 02111-1307  USA
 
-AC_PREREQ(2.54)
+AC_PREREQ(2.59a)
 
 ## ------------------------ ##
 ## Autoconf initialisation. ##
@@ -42,7 +42,7 @@ AC_PROG_CC
 ## Libtool initialisation. ##
 ## ----------------------- ##
 AC_LIBTOOL_TAGS([])
-AC_PROG_LIBTOOL
+LT_INIT
 AC_SUBST([LIBTOOL_DEPS])
 
 
